// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render caption text with example Farsi offscreen text 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #757575;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: italic;
  padding: 0.5rem 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:63em) {
  .c0 {
    padding: 0.5rem 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
     ، عنوان تصویر
  </span>
  Some caption text...
</figcaption>
`;

exports[`should render caption text with example News offscreen text 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #757575;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: italic;
  padding: 0.5rem 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:63em) {
  .c0 {
    padding: 0.5rem 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
    Image caption, 
  </span>
  Some caption text...
</figcaption>
`;

exports[`should render caption text with no VisuallyHiddenText component when no imageCaptionOffscreenText is defined in ServiceContext 1`] = `
.c1 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c0 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #757575;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: italic;
  padding: 0.5rem 0.5rem;
  width: 100%;
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 0.875rem;
  }
}

@media (min-width:25em) and (max-width:62.9375em) {
  .c0 {
    padding: 0.5rem 1rem;
  }
}

@media (min-width:63em) {
  .c0 {
    padding: 0.5rem 0;
  }
}

<figcaption
  className="c0"
>
  <span
    className="c1"
  >
    Caption, 
  </span>
  Some caption text...
</figcaption>
`;
